# zu-icons

./: .gitmodules  Cargo.toml  README.md
crates/dioxus-examples/: Cargo.toml  Dioxus.toml
crates/dioxus-examples/assets/: tailwind.css
crates/dioxus-examples/src/: app.rs  main.rs
crates/dioxus-examples/src/pages/: ant_page.rs  box_page.rs  circum_page.rs  fa_page.rs  game_page.rs  home_page.rs  material_page.rs  mod.rs  phosphor_page.rs  simple_page.rs  tabler_page.rs  vsc_page.rs
crates/dioxus-icon-component/: Cargo.toml  README.md
crates/dioxus-icon-component/src/: lib.rs
crates/dioxus-icons-ant/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-ant/src/: filled.rs  lib.rs  outlined.rs  twotone.rs
crates/dioxus-icons-box/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-box/src/: lib.rs  logos.rs  regular.rs  solid.rs
crates/dioxus-icons-bs/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-bs-examples/: Cargo.toml  Dioxus.toml
crates/dioxus-icons-bs-examples/src/: icons_page.rs  main.rs
crates/dioxus-icons-bs/src/: lib.rs
crates/dioxus-icons-circum/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-circum/src/: lib.rs
crates/dioxus-icons-component/: Cargo.toml
crates/dioxus-icons-component/src/: lib.rs
crates/dioxus-icons-fa/: .gitignore  Cargo.toml  README.md  build.rs
crates/dioxus-icons-fa/src/: brands.rs  lib.rs  regular.rs  solid.rs
crates/dioxus-icons-fa/src/brands/: accessible_icon.rs  accusoft.rs  adn.rs  adversal.rs  affiliatetheme.rs  airbnb.rs  algolia.rs  alipay.rs  amazon.rs  amazon_pay.rs  amilia.rs  android.rs  angellist.rs  angrycreative.rs  angular.rs  app_store.rs  app_store_ios.rs  apper.rs  apple.rs  apple_pay.rs  arch_linux.rs  artstation.rs  asymmetrik.rs  atlassian.rs  audible.rs  autoprefixer.rs  avianex.rs  aviato.rs  aws.rs  bandcamp.rs  battle_net.rs  behance.rs  behance_square.rs  bgg.rs  bilibili.rs  bimobject.rs  bitbucket.rs  bitcoin.rs  bity.rs  black_tie.rs  (+547 more)
crates/dioxus-icons-fa/src/regular/: address_book.rs  address_card.rs  alarm_clock.rs  angry.rs  arrow_alt_circle_down.rs  arrow_alt_circle_left.rs  arrow_alt_circle_right.rs  arrow_alt_circle_up.rs  bar_chart.rs  bell.rs  bell_slash.rs  bookmark.rs  building.rs  camera.rs  (+259 more)
crates/dioxus-icons-feather/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-feather/src/: lib.rs
crates/dioxus-icons-game/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-game/src/: andymeneely.rs  aussiesim.rs  badges.rs  carl_olsen.rs  caro_asercion.rs  cathelineau.rs  catsu.rs  darkzaitzev.rs  delapouite.rs  faithtoken.rs  felbrigg.rs  generalace135.rs  guard13007.rs  heavenly_dog.rs  irongamer.rs  john_colburn.rs  john_redman.rs  kier_heyl.rs  lib.rs  lorc.rs  lord_berandas.rs  lucasms.rs  pepijn_poolman.rs  pierre_leducq.rs  priorblue.rs  quoting.rs  rihlsul.rs  sbed.rs  seregacthtuf.rs  skoll.rs  sparker.rs  spencerdub.rs  starseeker.rs  various_artists.rs  viscious_speed.rs  willdabeast.rs  zajkonur.rs  zeromancer.rs
crates/dioxus-icons-line-awesome/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-line-awesome/src/: lib.rs
crates/dioxus-icons-lucide/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-lucide/src/: lib.rs
crates/dioxus-icons-md/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-md/src/: filled.rs  lib.rs  outlined.rs  round.rs  sharp.rs  twotone.rs
crates/dioxus-icons-radix/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-radix/src/: lib.rs
crates/dioxus-icons-remix/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-remix/src/: arrows.rs  buildings.rs  business.rs  communication.rs  design.rs  development.rs  device.rs  document.rs  editor.rs  finance.rs  food.rs  game_sports.rs  health_medical.rs  lib.rs  logos.rs  map.rs  media.rs  others.rs  system.rs  user_faces.rs  weather.rs
crates/dioxus-icons-simple/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-tabler/: Cargo.toml  README.md  build.rs
crates/dioxus-icons-tabler/src/: filled.rs  lib.rs  outline.rs
crates/gpui-icons-bs/: Cargo.toml  README.md  build.rs
crates/gpui-icons-bs/assets/: icons
crates/gpui-icons-bs/src/: lib.rs
crates/zu-icon-util/: Cargo.toml
crates/zu-icon-util/src/: lib.rs  template.rs
crates/zu-icons-util/: Cargo.toml  README.md
crates/zu-icons-util/src/: icon_list.rs  lib.rs  module.rs  svg.rs  template.rs
crates/zu-icons-util/tests/: parse_snyk.rs  parse_svg.rs  parse_twitch.rs  parse_whats_app.rs
dioxus-icons-gallery/: Cargo.toml
dioxus-icons-gallery/crates/ant-examples/: Cargo.toml  Dioxus.toml
dioxus-icons-gallery/crates/box-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/bs-examples/: Cargo.toml  build.rs
dioxus-icons-gallery/crates/circum-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/dev-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/fa-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/feather-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/game-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/grommet-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/hero-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/ionic-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/line-awesome-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/lucide-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/md-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/oct-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/phosphor-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/radix-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/simple-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/tabler-examples/: Cargo.toml  Dioxus.toml  build.rs
dioxus-icons-gallery/crates/vsc-examples/: Cargo.toml  Dioxus.toml  build.rs
(+2170 files in other folders)
