
[workspace]
resolver = "3"
members = [
  "crates/dioxus-icon-component",
  "crates/dioxus-icons-bs",
  "crates/dioxus-icons-fa",
  "crates/dioxus-icons-hero",
  "crates/zu-icon-util",
]

[workspace.package]
authors = ["Xu Shaohua <shaohua@biofan.org>"]
categories = ["wasm", "web-programming"]
edition = "2024"
homepage = "https://github.com/RustVis/dioxus-icons"
license ="Apache-2.0"
publish = true
repository = "https://github.com/RustVis/dioxus-icons"
rust-version = "1.85"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
dioxus = { version = "0.7.9", default-features = false, features = ["html", "macro", "signals"] }
inflections = { version = "1.1.1" }
regex = { version = "1.12.3" }
scraper = { version = "0.27.0" }

dioxus-icon-component = { path = "crates/dioxus-icon-component", version = "0.1.0" }
zu-icon-util = { path = "crates/zu-icon-util", version = "0.2.1" }

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = -1 }

dead_code = "deny"
non_snake_case = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

expect_used = "deny"
multiple_crate_versions = "warn"
panic_in_result_fn = "deny"
panic = "deny"
unused_result_ok = "deny"
unwrap_used = "deny"
