[package]
name = "dioxus-examples"
version = "0.1.0"
publish = false

authors = ["Xu Shaohua <shaohua@biofan.org>"]
categories = ["wasm", "web-programming"]
edition = "2024"
homepage = "https://github.com/RustVis/zu-icons"
license = "Apache-2.0"
repository = "https://github.com/RustVis/zu-icons"
rust-version = "1.88"

[workspace]

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "web"] }
dioxus-icons-ant = { path = "../dioxus-icons-ant", default-features = false, features = ["filled", "outlined", "twotone"] }
dioxus-icons-box = { path = "../dioxus-icons-box" }
dioxus-icons-bs = { path = "../dioxus-icons-bs" }
dioxus-icons-circum = { path = "../dioxus-icons-circum" }
dioxus-icons-dev = { path = "../dioxus-icons-dev" }
dioxus-icons-fa = { path = "../dioxus-icons-fa" }
dioxus-icons-feather = { path = "../dioxus-icons-feather" }
dioxus-icons-game = { path = "../dioxus-icons-game" }
dioxus-icons-grommet = { path = "../dioxus-icons-grommet" }
dioxus-icons-hero = { path = "../dioxus-icons-hero" }
dioxus-icons-ionic = { path = "../dioxus-icons-ionic" }
dioxus-icons-line-awesome = { path = "../dioxus-icons-line-awesome" }
dioxus-icons-lucide = { path = "../dioxus-icons-lucide" }
dioxus-icons-md = { path = "../dioxus-icons-md" }

[profile.release]
lto = true
opt-level = 's'
