[package]
name = "dioxus-icon-component"
version = "0.2.0"
documentation = "https://docs.rs/dioxus-icon-component"
description = "Common icon component for Dioxus"
keywords = ["web", "wasm", "icon", "dioxus", "zu"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true

[lints]
workspace = true
