[package]
name = "dioxus-icons-component"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true

[lints]
workspace = true
