[package]
name = "dioxus-icons-component"
version = "0.1.0"
description = "Icon component for Dioxus"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true

[lints]
workspace = true
