[package]
name = "dioxus-icons-fa"
version = "0.1.0"
documentation = "https://docs.rs/dioxus-icons-fa"
description = "Font Awesome icons for dioxus framework"
keywords = ["web", "wasm", "icons", "font-awesome", "dioxus"]

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true

[lints]
workspace = true
