[package]
name = "dioxus-icons-fa"
version = "0.1.0"
documentation = "https://docs.rs/dioxus-icons-fa"
description = "Font Awesome icons for dioxus framework"
keywords = ["web", "wasm", "icons", "font-awesome", "dioxus"]

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true

[build-dependencies]
anyhow.workspace = true
icon-util.workspace = true
inflections.workspace = true

[lints]
workspace = true

[features]
default = []
all = [
    "brands_lumon_drop",
    "regular_hand",
    "solid_toilet_paper",
]
brands_lumon_drop = []
regular_hand = []
solid_toilet_paper = []

[dev-dependencies]
anyhow = "1.0.102"
