[package]
name = "dioxus-icons-game"
version = "0.2.0"
documentation = "https://docs.rs/dioxus-icons-game"
description = "Game icons for dioxus framework"
keywords = ["web", "wasm", "icons", "game", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
zu-icons-util.workspace = true

[lints]
workspace = true

[features]
default = [
    "andymeneely",
    "aussiesim",
    "badges",
    "carl-olsen",
    "caro-asercion",
    "cathelineau",
    "catsu",
    "darkzaitzev",
    "delapouite",
    "faithtoken",
    "felbrigg",
    "generalace135",
    "guard13007",
    "heavenly-dog",
    "irongamer",
    "john-colburn",
    "john-redman",
    "kier-heyl",
    "lorc",
    "lord-berandas",
    "lucasms",
    "pepijn-poolman",
    "pierre-leducq",
    "priorblue",
    "quoting",
    "rihlsul",
    "sbed",
    "seregacthtuf",
    "skoll",
    "sparker",
    "spencerdub",
    "starseeker",
    "various-artists",
    "viscious-speed",
    "willdabeast",
    "zajkonur",
    "zeromancer",
]


andymeneely = []
aussiesim = []
badges = []
carl-olsen = []
caro-asercion = []
cathelineau = []
catsu = []
darkzaitzev = []
delapouite = []
faithtoken = []
felbrigg = []
generalace135 = []
guard13007 = []
heavenly-dog = []
irongamer = []
john-colburn = []
john-redman = []
kier-heyl = []
lorc = []
lord-berandas = []
lucasms = []
pepijn-poolman = []
pierre-leducq = []
priorblue = []
quoting = []
rihlsul = []
sbed = []
seregacthtuf = []
skoll = []
sparker = []
spencerdub = []
starseeker = []
various-artists = []
viscious-speed = []
willdabeast = []
zajkonur = []
zeromancer = []
