[package]
name = "dioxus-icons-game"
version = "0.2.2"
documentation = "https://docs.rs/dioxus-icons-game"
description = "Game icons for dioxus framework"
keywords = ["web", "wasm", "icons", "game", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
zu-icons-util.workspace = true

[lints]
workspace = true

[features]
default = [
    "andymeneely",
    "aussiesim",
    "badges",
    "carl_olsen",
    "caro_asercion",
    "cathelineau",
    "catsu",
    "darkzaitzev",
    "delapouite",
    "faithtoken",
    "felbrigg",
    "generalace135",
    "guard13007",
    "heavenly_dog",
    "irongamer",
    "john_colburn",
    "john_redman",
    "kier_heyl",
    "lorc",
    "lord_berandas",
    "lucasms",
    "pepijn_poolman",
    "pierre_leducq",
    "priorblue",
    "quoting",
    "rihlsul",
    "sbed",
    "seregacthtuf",
    "skoll",
    "sparker",
    "spencerdub",
    "starseeker",
    "various_artists",
    "viscious_speed",
    "willdabeast",
    "zajkonur",
    "zeromancer",
]


andymeneely = []
aussiesim = []
badges = []
carl_olsen = []
caro_asercion = []
cathelineau = []
catsu = []
darkzaitzev = []
delapouite = []
faithtoken = []
felbrigg = []
generalace135 = []
guard13007 = []
heavenly_dog = []
irongamer = []
john_colburn = []
john_redman = []
kier_heyl = []
lorc = []
lord_berandas = []
lucasms = []
pepijn_poolman = []
pierre_leducq = []
priorblue = []
quoting = []
rihlsul = []
sbed = []
seregacthtuf = []
skoll = []
sparker = []
spencerdub = []
starseeker = []
various_artists = []
viscious_speed = []
willdabeast = []
zajkonur = []
zeromancer = []
