[package]
name = "dioxus-icons-line-awesome"
version = "0.2.0"
documentation = "https://docs.rs/dioxus-icons-line-awesome"
description = "Icon8 Line awesome icons for dioxus framework"
keywords = ["web", "wasm", "icon8", "line-awesome", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
zu-icons-util.workspace = true

[lints]
workspace = true
