[package]
name = "dioxus-icons-lucide"
version = "0.1.0"
documentation = "https://docs.rs/dioxus-icons-lucide"
description = "Lucide icons for dioxus framework"
keywords = ["web", "wasm", "icons", "lucide", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
inflections.workspace = true
zu-icon-util.workspace = true

[lints]
workspace = true
