[package]
name = "dioxus-icons-md"
version = "0.1.0"
documentation = "https://docs.rs/dioxus-icons-md"
description = "Material design icons for dioxus framework"
keywords = ["wasm", "icons", "md", "material-design", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
zu-icons-util.workspace = true

[lints]
workspace = true

[features]
default = [
  "filled",
  "outlined",
  "round",
  "sharp",
  "twotone",
]

filled = []
outlined = []
round = []
sharp = []
twotone = []
