[package]
name = "dioxus-icons-radix"
version = "0.1.0"
documentation = "https://docs.rs/dioxus-icons-radix"
description = "Radix icons for dioxus framework"
keywords = ["web", "wasm", "icons", "radix", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
zu-icons-util.workspace = true

[lints]
workspace = true
