[package]
name = "dioxus-icons-remix"
version = "0.2.1"
documentation = "https://docs.rs/dioxus-icons-remix"
description = "Remix icons for dioxus framework"
keywords = ["web", "wasm", "icons", "remix", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
zu-icons-util.workspace = true

[lints]
workspace = true

[features]
default = [
  "arrows",
  "buildings",
  "business",
  "communication",
  "design",
  "development",
  "device",
  "document",
  "editor",
  "finance",
  "food",
  "game_sports",
  "health_medical",
  "logos",
  "map",
  "media",
  "others",
  "system",
  "user_faces",
  "weather",
]


arrows = []
buildings = []
business = []
communication = []
design = []
development = []
device = []
document = []
editor = []
finance = []
food = []
game_sports = []
health_medical = []
logos = []
map = []
media = []
others = []
system = []
user_faces = []
weather = []
