[package]
name = "dioxus-icons-tabler"
version = "0.2.1"
documentation = "https://docs.rs/dioxus-icons-tabler"
description = "Tabler icons for dioxus framework"
keywords = ["web", "wasm", "icons", "tabler", "dioxus"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-icon-component.workspace = true

[build-dependencies]
anyhow.workspace = true
zu-icons-util.workspace = true

[lints]
workspace = true

[features]
default = [
  "filled",
  "outline",
]

filled = []
outline = []
