[package]
name = "zu-icon-util"
version = "0.1.0"
documentation = "https://docs.rs/zu-icon-util"
description = "Utilities for zu-icons"
keywords = ["web", "wasm", "icon", "utility", "zu"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
inflections.workspace = true
regex.workspace = true
scraper.workspace = true

[lints]
workspace = true
