[package]
name = "zu-icons-util"
version = "0.3.2"
documentation = "https://docs.rs/zu-icons-util"
description = "Utilities for zu-icons"
keywords = ["web", "wasm", "icon", "utility", "zu"]
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
dioxus.workspace = true
inflections.workspace = true
regex.workspace = true
scraper.workspace = true

[lints]
workspace = true
